# yummymusic

./: .gitignore  minimal_modal.py  wans2v.py
ComfyUI/custom_nodes/ComfyUI_ChatterBox_SRT_Voice/: .gitignore  CHANGELOG.md  PROJECT_INDEX.md  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
ComfyUI/custom_nodes/ComfyUI_ChatterBox_SRT_Voice/docs/: BUMP_SCRIPT_INSTRUCTIONS.md  CHARACTER_SWITCHING_GUIDE.md
ComfyUI/custom_nodes/ComfyUI_ChatterBox_SRT_Voice/engines/adapters/: chatterbox_adapter.py  f5tts_adapter.py
ComfyUI/custom_nodes/ComfyUI_ChatterBox_SRT_Voice/engines/chatterbox/: __init__.py  audio_timing.py  language_models.py  tts.py  vc.py
ComfyUI/custom_nodes/ComfyUI_ChatterBox_SRT_Voice/engines/f5tts/: f5tts.py  f5tts_edit_engine.py
ComfyUI/custom_nodes/ComfyUI_ChatterBox_SRT_Voice/example_workflows/: Chatterbox integration.json  🎤 📺 F5-TTS SRT and Normal Generation.json  👄 F5-TTS Speech Editor Workflow.json  📺 Chatterbox SRT.json
ComfyUI/custom_nodes/ComfyUI_ChatterBox_SRT_Voice/nodes/audio/: analyzer_node.py  analyzer_options_node.py  recorder_node.py
ComfyUI/custom_nodes/ComfyUI_ChatterBox_SRT_Voice/nodes/base/: base_node.py  f5tts_base_node.py
ComfyUI/custom_nodes/ComfyUI_ChatterBox_SRT_Voice/nodes/chatterbox/: chatterbox_srt_node.py  (+2 more)
ComfyUI/custom_nodes/ComfyUI_ChatterBox_SRT_Voice/scripts/: bump_version_enhanced.py  version_utils.py
ComfyUI/custom_nodes/ComfyUI_ChatterBox_SRT_Voice/voices_examples/: #character_alias_map.txt
ComfyUI/custom_nodes/ComfyUI_ChatterBox_SRT_Voice/web/: audio_analyzer_interface.js
(+46 files in other folders)
